--- a/src/variables-desktop.css
+++ b/src/variables-desktop.css
@@ -80,5 +80,6 @@
   var-padding--select: .06rem 1.4rem .06rem 0.4rem;
   var-padding--overlay: 1.6rem;
   var-padding--overlay__title: 0rem 0 1rem;
+  var-max-width--overlay: 50%;
 }
 
