--- a/test/example.expected.css
+++ b/test/example.expected.css
@@ -11,6 +11,7 @@
   border-radius-huge: 25px;
   padding: .25rem .75rem;
   padding-large: .28rem 1.16rem;
+  padding-right-select: 2rem;
   height: 1.313rem;
   height-large: 1.688rem;
   line-height: 1.313rem;
